--- a/m1/00-projeto-individual/index.html
+++ b/m1/00-projeto-individual/index.html
@@ -14,15 +14,48 @@
 </head>
 
 <body>
-  <!-- <div class="background">
-    <div class="backgroud-esq"></div>
-    <div class="backgroud-dir"></div>
-  </div>
-  <header>
-    <div class="logo">
-      <img src="assets/img/logo/logo.png" alt="Logo">
+  <section id="home">
+    <div class="container">
+      <div class="home-stroke"></div>
+      <div class="grid">
+        <header class="header">
+          <div class="logo">
+            <img src="assets/img/logo/logo.png" alt="logo">
+          </div>
+        </header>
+
+        <div class="flower-bll">
+          <img src="assets/icons/details_png/flower-bll.png" alt="flor desenho">
+        </div>
+
+        <div class="flower-blm">
+          <img src="assets/icons/details_png/flower-blm.png" alt="flor desenho">
+        </div>
+
+        <div class="flower-blr">
+          <img src="assets/icons/details_png/flower-blr.png" alt="flor desenho">
+        </div>
+
+      <div class="photo-perfil">
+        <img src="assets/img/perfil/photo-perfil.png" alt="foto de perfil">
+      </div>
+
+      <div class="flower-tr">
+        <img src="assets/icons/details_png/flower-tr.png" alt="">
+      </div>
+
+      <ul class="menu font-b cor-s3">
+        <li><a class="button" href="#">sobre</a></li>
+        <li><a class="button" href="#">hobbies</a></li>
+        <li><a class="button" href="#">contato</a></li>
+      </ul>
     </div>
-  </header> -->
+    <div class="background">
+      <div class="background-esq"></div>
+      <div class="background-dir"></div>
+    </div>
+  </section>
+  </div>
 </body>
 
 </html>
