feat: about hobbies

--- a/m1/00-projeto-individual/index.html
+++ b/m1/00-projeto-individual/index.html
@@ -45,14 +45,42 @@
       </div>
 
       <ul class="menu font-b cor-s3">
-        <li><a class="button" href="#">sobre</a></li>
-        <li><a class="button" href="#">hobbies</a></li>
+        <li><a class="button" href="#about">sobre</a></li>
+        <li><a class="button" href="#hobbies">hobbies</a></li>
         <li><a class="button" href="#">contato</a></li>
       </ul>
     </div>
     <div class="background">
       <div class="background-esq"></div>
       <div class="background-dir"></div>
+    </div>
+  </section>
+
+  <section id="about">
+    <div class="container">
+      <div class="background-info backgroud-about font-t cor-p3">
+        <span class="quem">quem</span>
+        <div class="sub-bg sub-bg-about">
+          <div class="sub-bg-s sub-bg-s-about font-p paragrafo-claro ">
+            <p class="about-p" maxlenght="50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque recusandae nemo nesciunt corporis nihil unde similique non reprehenderit, dolorem facere reiciendis velit laboriosam officia enim commodi saepe fugit assumenda id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero molestias aperiam illo eaque beatae laboriosam. Animi praesentium quam tempore. Corporis nam repellat vel numquam quo, suscipit voluptate officiis facere doloribus.</p>
+          </div>
+        </div>
+        <span class="sou">sou</span>
+      </div>
+    </div>
+  </section>
+
+  <section id="hobbies">
+    <div class="container">
+      <div class="background-info backgroud-hobbies font-t cor-s3">
+        <span class="hob">hob</span>
+        <div class="sub-bg sub-bg-hobbies">
+          <div class="sub-bg-s sub-bg-s-hobbies font-p paragrafo-escuro ">
+            <p class="about-p" maxlenght="50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque recusandae nemo nesciunt corporis nihil unde similique non reprehenderit, dolorem facere reiciendis velit laboriosam officia enim commodi saepe fugit assumenda id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero molestias aperiam illo eaque beatae laboriosam. Animi praesentium quam tempore. Corporis nam repellat vel numquam quo, suscipit voluptate officiis facere doloribus.</p>
+          </div>
+        </div>
+        <span class="bies">bies</span>
+      </div>
     </div>
   </section>
   </div>
