feat: details-aboud & hobbies

--- a/m1/00-projeto-individual/index.html
+++ b/m1/00-projeto-individual/index.html
@@ -16,7 +16,6 @@
 <body>
   <section id="home">
     <div class="container">
-      <div class="home-stroke"></div>
       <div class="grid">
         <header class="header">
           <div class="logo">
@@ -25,15 +24,15 @@
         </header>
 
         <div class="flower-bll">
-          <img src="assets/icons/details_png/flower-bll.png" alt="flor desenho">
+          <img src="assets/icons/details_png/home-flower-bll.png" alt="flor desenho">
         </div>
 
         <div class="flower-blm">
-          <img src="assets/icons/details_png/flower-blm.png" alt="flor desenho">
+          <img src="assets/icons/details_png/home-flower-blm.png" alt="flor desenho">
         </div>
 
         <div class="flower-blr">
-          <img src="assets/icons/details_png/flower-blr.png" alt="flor desenho">
+          <img src="assets/icons/details_png/home-flower-blr.png" alt="flor desenho">
         </div>
 
       <div class="photo-perfil">
@@ -41,7 +40,7 @@
       </div>
 
       <div class="flower-tr">
-        <img src="assets/icons/details_png/flower-tr.png" alt="">
+        <img src="assets/icons/details_png/home-flower-tr.png" alt="">
       </div>
 
       <ul class="menu font-b cor-s3">
@@ -51,21 +50,27 @@
       </ul>
     </div>
     <div class="background">
-      <div class="background-esq"></div>
-      <div class="background-dir"></div>
+      <div class="background-esq background-esq-home "></div>
+      <div class="background-dir background-dir-home"></div>
     </div>
   </section>
 
   <section id="about">
     <div class="container">
       <div class="background-info backgroud-about font-t cor-p3">
-        <span class="quem">quem</span>
+        <div class="top">
+          <span class="quem">quem</span>
+          <img src="assets/icons/details_png/about-flower-t.png" alt="flor desenho">
+        </div>
         <div class="sub-bg sub-bg-about">
           <div class="sub-bg-s sub-bg-s-about font-p paragrafo-claro ">
             <p class="about-p" maxlenght="50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque recusandae nemo nesciunt corporis nihil unde similique non reprehenderit, dolorem facere reiciendis velit laboriosam officia enim commodi saepe fugit assumenda id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero molestias aperiam illo eaque beatae laboriosam. Animi praesentium quam tempore. Corporis nam repellat vel numquam quo, suscipit voluptate officiis facere doloribus.</p>
           </div>
         </div>
-        <span class="sou">sou</span>
+        <div class="bot">
+          <img src="assets/icons/details_png/about-flower-bl.png" alt="flor desenho">
+          <span class="sou">sou</span>
+        </div>
       </div>
     </div>
   </section>
@@ -74,6 +79,7 @@
     <div class="container">
       <div class="background-info backgroud-hobbies font-t cor-s3">
         <span class="hob">hob</span>
+          <img class="hobbies-flower" src="assets/icons/details_png/hobbies-flower-tr.png" alt="flor desenho">
         <div class="sub-bg sub-bg-hobbies">
           <div class="sub-bg-s sub-bg-s-hobbies font-p paragrafo-escuro ">
             <p class="about-p" maxlenght="50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque recusandae nemo nesciunt corporis nihil unde similique non reprehenderit, dolorem facere reiciendis velit laboriosam officia enim commodi saepe fugit assumenda id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero molestias aperiam illo eaque beatae laboriosam. Animi praesentium quam tempore. Corporis nam repellat vel numquam quo, suscipit voluptate officiis facere doloribus.</p>
@@ -83,7 +89,15 @@
       </div>
     </div>
   </section>
-  </div>
+
+  <section id="contact">
+    <div class="container">
+      <div class="background">
+        <div class="background-esq background-esq-contact"></div>
+        <div class="background-dir background-dir-contact"></div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
