feat: contact fix: content

--- a/m1/00-projeto-individual/index.html
+++ b/m1/00-projeto-individual/index.html
@@ -93,9 +93,31 @@
   <section id="contact">
     <div class="container">
       <div class="background">
-        <div class="background-esq background-esq-contact"></div>
-        <div class="background-dir background-dir-contact"></div>
+        <div class="background-esq background-esq-contact">
+          <div class="contateme">
+            <img class="contateme-img" src="/assets/icons/details_png/contact-flower-tl.png" alt="Flor desenho">
+            <span class="font-t cor-p3">
+              CON<br>TATE<br>ME
+            </span>
+            <div class="contact-redes">
+                <a href="">
+                  <img src="assets/icons/icons/whatsapp.png" alt="icone whatsapp">
+                </a>
+                <a href="">
+                  <img src="assets/icons/icons/linkedin.png" alt="icone linkedin">
+                </a>
+                <a href="">
+                  <img src="assets/icons/icons/github.png" alt="icone github">
+                </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="background-dir background-dir-contact">
+
+        </div>
       </div>
+      
     </div>
   </section>
 </body>
